# DB_lmdb

./: .gitignore  .gitmodules  ARCHITECTURE.md  CMakeLists.txt  Makefile  test.c
.github/workflows/: benchmarks.yml  plantuml.yml
app/include/: db_lmdb_core.h
app/include/api/: db_lmdb.h
app/include/api/core/: common.h  config.h  core.h
app/include/api/core/operations/: operations.h  ops_actions.h  ops_creat.h  ops_exec.h  ops_facade.h  ops_setup.h
app/include/api/core/operations/db/: db.h  dbi.h  dbi_ext.h  dbi_int.h
app/include/api/core/operations/ops_int/: ops_actions.h  ops_exec.h  ops_init.h
app/include/api/core/operations/ops_int/db/: db.h
app/include/api/core/operations/security/: security.h
app/include/core/: common.h  config.h  core.h
app/include/core/operations/: ops_facade.h  void_store.h
app/include/core/operations/ops_int/: ops_actions.h  ops_exec.h  ops_externals.h  ops_init.h  ops_internals.h
app/include/core/operations/ops_int/db/: db.h  dbi_ext.h  dbi_int.h
app/include/core/operations/ops_int/security/: security.h
app/include/db/: db.h
app/include/db_lmdb/: db_lmdb.h  db_lmdb_config.h  db_lmdb_core.h  db_lmdb_dbi.h  db_lmdb_internal.h  db_lmdb_ops.h  db_lmdb_safety.h
app/include/internal/: internal.h
app/src/api/: db_lmdb.c
app/src/api/core/: core.c
app/src/api/core/operations/: ops_actions.c  ops_creat.c  ops_exec.c  ops_setup.c  void_store.c
app/src/api/core/operations/db/: db.c  dbi.c
app/src/api/core/operations/ops_int/: ops_exec.c
app/src/api/core/operations/ops_int/security/: security.c
app/src/api/core/operations/security/: security.c
app/src/core/: core.c  db_lmdb_core.c
app/src/core/operations/ops_int/: ops_actions.c  ops_exec.c  ops_init.c
app/src/core/operations/ops_int/db/: dbi_int.c
app/src/core/operations/ops_int/security/: security.c
app/src/db_lmdb/: db_lmdb.c  db_lmdb_core.c  db_lmdb_dbi.c  db_lmdb_ops.c  db_lmdb_safety.c
app/src/ops/: db_lmdb_ops.c
docs/architecture/: DYNAMIC.md  STATIC.md
docs/plantuml/: README.md  base.puml  dynamic_init.puml  dynamic_ops.puml  static_architecture.puml
docs/plantuml/examples/: architecture_example.puml
docs/plantuml/puml/: base.puml  db_package.puml  dynamic_init.puml  ops_package.puml  security_package.puml  static_architecture.puml
scripts/: build.sh  render_plantuml.sh  run.sh
tests/: TESTS_TODO.md
tests/IT/IT_core/: IT_db_core_init.c
tests/UT/: UT_dbi_int.c  UT_ops_actions.c  UT_ops_exec.c  UT_ops_init.c  UT_security_errno_map.c  ut_env.c  ut_env.h
tests/UT/coverage/: UT_coverage.functions.html  UT_coverage.html  UT_coverage.security.c.3449c2531f7e3879d10b83fa1e747efe.html
tests/UT/results/: UT_coverage.functions.html  UT_coverage.html  UT_coverage.security.c.3449c2531f7e3879d10b83fa1e747efe.html
tests/benchmarks/: README.md  bench_db_get_batch.c  bench_db_hardcore.c  bench_db_init.c  bench_db_ops_batch.c  bench_db_read_mt.c  bench_db_write.c  bench_logging.h  bench_system_info.h
utils/: build_dbg.sh  render_plantuml.sh  run_bench.sh  run_dbg.sh  run_ut_cov  run_ut_cov.sh  test_it_all.sh  test_ut_all  test_ut_all.sh
utils/bench/: create_db.sh  hardcore_db.sh  read_db.sh  read_db_mt.sh  write_db.sh
